--- a/src/app/modules/problems/pages/statistics/section-attempts-for-solve/section-attempts-for-solve.component.scss
+++ b/src/app/modules/problems/pages/statistics/section-attempts-for-solve/section-attempts-for-solve.component.scss
@@ -1,3 +1,11 @@
-.card {
-  height: 410px;
+.attempts-card {
+  .card-body {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  apex-chart {
+    width: 100%;
+  }
 }
