--- a/src/app/modules/problems/pages/statistics/section-activity/section-activity.component.html
+++ b/src/app/modules/problems/pages/statistics/section-activity/section-activity.component.html
@@ -1,1 +1,7 @@
-<problems-activity-card [username]="username"></problems-activity-card>
+<problems-activity-card
+  [solved]="solved"
+  [series]="series"
+  [selectedDays]="selectedDays"
+  [allowedDays]="allowedDays"
+  (daysChange)="daysChange.emit($event)"
+></problems-activity-card>
