--- a/src/app/modules/problems/pages/statistics/section-difficulties/section-difficulties.component.html
+++ b/src/app/modules/problems/pages/statistics/section-difficulties/section-difficulties.component.html
@@ -1,21 +1,18 @@
 <kep-card>
-  <div class="card-header">
-    <div class="card-title">
-      {{ 'Solved' | translate }}
-    </div>
-  </div>
-
   <div class="card-body">
-    <div class="total">
+    <div class="card-header border-0 px-0 pt-0 pb-1 d-flex align-items-center justify-content-between">
+      <div>
+        <div class="text-uppercase small text-muted fw-bold">{{ 'Difficulty' | translate }}</div>
+        <div class="text-body-secondary">{{ difficulties?.totalSolved | number }} / {{ difficulties?.totalProblems | number }}</div>
+      </div>
       <div class="chart">
         @if (chartOptions) {
-          <apex-chart
-            [options]="chartOptions"
-          ></apex-chart>
+          <apex-chart [options]="chartOptions"></apex-chart>
         }
       </div>
     </div>
-    <div class="difficulties">
+
+    <div class="difficulties mt-1">
       <swiper [config]="swiperConfig" [height]="180">
         <div class="swiper-slide">
           <div class="difficulty">
