--- a/src/app/modules/problems/pages/statistics/section-difficulties/section-difficulties.component.scss
+++ b/src/app/modules/problems/pages/statistics/section-difficulties/section-difficulties.component.scss
@@ -1,55 +1,49 @@
-.card {
-  height: 250px;
+:host {
+  display: block;
+}
 
+kep-card {
   .card-body {
-    display: grid;
-    grid-template-columns: 2fr 3fr;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    .chart {
+      width: 140px;
+      min-width: 120px;
+    }
   }
 }
 
 .difficulties {
   .difficulty {
-    margin-bottom: 1rem;
+    padding: 0.5rem 0.25rem;
 
-    .title {
-      font-weight: 400;
+    .info {
+      font-size: 0.9rem;
+      text-transform: uppercase;
+      letter-spacing: 0.08em;
+      color: var(--bs-secondary-color);
+    }
+
+    .solved {
+      font-weight: 600;
+      font-size: 0.95rem;
+    }
+
+    ::ng-deep .progress {
+      height: 0.5rem;
+      border-radius: 999px;
     }
   }
+}
 
-  .swiper-slide {
-    &:nth-child(1) {
-      ::ng-deep .progress {
-        background-color: rgba(40, 199, 111, 0.12);
-      }
-    }
-
-    &:nth-child(2) {
-      ::ng-deep .progress {
-        background-color: rgba(0, 207, 232, 0.12);
-      }
-    }
-
-    &:nth-child(3) {
-      ::ng-deep .progress {
-        background-color: rgba(67, 97, 238, 0.12);
-      }
-    }
-
-    &:nth-child(5) {
-      ::ng-deep .progress {
-        background-color: rgba(255, 159, 67, 0.12);
-      }
-    }
-
-    &:nth-child(6) {
-      ::ng-deep .progress {
-        background-color: rgba(234, 84, 85, 0.12);
-      }
-    }
-
-    &:nth-child(7) {
-      ::ng-deep .progress {
-        background-color: rgba(75, 75, 75, 0.12);
+@media (max-width: 991.98px) {
+  kep-card {
+    .card-body {
+      .chart {
+        width: 110px;
+        margin-left: auto;
       }
     }
   }
