--- a/src/app/modules/problems/pages/statistics/section-time/section-time.component.html
+++ b/src/app/modules/problems/pages/statistics/section-time/section-time.component.html
@@ -1,56 +1,44 @@
-<div class="row">
+<div class="row g-1">
   <div class="col-lg-4 col-12">
-    <div class="card">
-      <div class="card-header">
-        <div class="card-title">
-          {{ 'ByWeekday' | translate }}
-        </div>
-      </div>
-
+    <kep-card class="time-card">
       <div class="card-body">
+        <div class="card-header px-0 pt-0 pb-1">
+          <div class="text-uppercase text-muted fw-bold small">{{ 'ByWeekday' | translate }}</div>
+        </div>
         @if (byWeekdayChart) {
-          <apex-chart
-            [options]="byWeekdayChart"
-          ></apex-chart>
+          <apex-chart [options]="byWeekdayChart"></apex-chart>
+        } @else {
+          <div class="empty-state text-muted text-center py-2">No data</div>
         }
       </div>
-    </div>
+    </kep-card>
   </div>
-
   <div class="col-lg-4 col-12">
-    <div class="card">
-      <div class="card-header">
-        <div class="card-title">
-          {{ 'ByMonth' | translate }}
-        </div>
-      </div>
-
+    <kep-card class="time-card">
       <div class="card-body">
+        <div class="card-header px-0 pt-0 pb-1">
+          <div class="text-uppercase text-muted fw-bold small">{{ 'ByMonth' | translate }}</div>
+        </div>
         @if (byMonthChart) {
-          <apex-chart
-            [options]="byMonthChart"
-          ></apex-chart>
+          <apex-chart [options]="byMonthChart"></apex-chart>
+        } @else {
+          <div class="empty-state text-muted text-center py-2">No data</div>
         }
       </div>
-    </div>
+    </kep-card>
   </div>
-
   <div class="col-lg-4 col-12">
-    <div class="card">
-      <div class="card-header">
-        <div class="card-title">
-          {{ 'ByPeriod' | translate }}
-        </div>
-      </div>
-
+    <kep-card class="time-card">
       <div class="card-body">
+        <div class="card-header px-0 pt-0 pb-1">
+          <div class="text-uppercase text-muted fw-bold small">{{ 'ByPeriod' | translate }}</div>
+        </div>
         @if (byPeriodChart) {
-          <apex-chart
-            [options]="byPeriodChart"
-          ></apex-chart>
+          <apex-chart [options]="byPeriodChart"></apex-chart>
+        } @else {
+          <div class="empty-state text-muted text-center py-2">No data</div>
         }
       </div>
-    </div>
-
+    </kep-card>
   </div>
 </div>
